WexGit/Wex_DX/force-app/main/default/objects/BOCA_Settings__c/BOCA_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BOCA Settings</label>
</CustomObject>