WexGit/Wex_DX/force-app/main/default/objects/BOCA_Settings__c/fields/BOCA_Integration_User_ID__c.field-meta.xml
<CustomField>
    <fullName>BOCA_Integration_User_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BOCA Integration User ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>