WexGit/Wex_DX/force-app/main/default/objects/BOCA_Settings__c/fields/Enable_BOCA_Task_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_BOCA_Task_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable BOCA Task Trigger</label>
    <type>Checkbox</type>
</CustomField>