WexGit/Wex_DX/force-app/main/default/objects/BOCA_Settings__c/fields/OTR_Save_For_Later_Template__c.field-meta.xml
<CustomField>
    <fullName>OTR_Save_For_Later_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTR Save For Later Template</label>
    <length>20</length>
    <type>Text</type>
</CustomField>